HW files/HW k8s-3/netology-deployment-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netology-deployment-backend
  labels:
    app: netology-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netology-backend
  template:
    metadata:
      labels:
        app: netology-backend
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
