HW files/HW k8s-3/netology-deployment-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netology-deployment-frontend
  labels:
    app: netology-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: netology-frontend
  template:
    metadata:
      labels:
        app: netology-frontend
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
