HW files/HW k8s-3/netology-deployment-init.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netology-deployment-init
  namespace: netology
spec:
  selector:
    matchLabels:
      app: nginx-init
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-init
    spec:
      containers:
      - name: nginx
        image: nginx:1.25.4
        ports:
        - containerPort: 80
