HW files/HW k8s-3/netology-deployment-net.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netology-deployment-net
  labels:
    app: netology-app-net
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: netology-app-net
  template:
    metadata:
      labels:
        app: netology-app-net
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
