HW files/HW k8s-3/netology-deployment-nfs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netology-deployment-nfs
  labels:
    app: netology-app-nfs
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netology-app-nfs
  template:
    metadata:
      labels:
        app: netology-app-nfs
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: vol-nfs
          mountPath: /nfs-share
      volumes:
      - name: vol-nfs
        persistentVolumeClaim:
          claimName: nfs
