HW files/HW k8s-3/netology-svc-back.yaml
apiVersion: v1
kind: Service
metadata:
  name: netology-svc-backend
spec:
  selector:
    app: netology-backend
  ports:
    - name: multitool-http
      protocol: TCP
      port: 9002
      targetPort: 8080
