HW files/HW k8s-3/netology-svc-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: netology-svc-frontend
spec:
  selector:
    app: netology-frontend
  ports:
    - name: nginx
      protocol: TCP
      port: 9001
      targetPort: 80
