HW files/HW k8s-3/netology-svc-init.yaml
apiVersion: v1
kind: Service
metadata:
  name: netology-svc-init
  namespace: netology
spec:
  selector:
    app: nginx-init
  ports:
    - name: nginx
      port: 80
