HW files/HW k8s-3/netology-svc-net.yaml
apiVersion: v1
kind: Service
metadata:
  name: netology-svc-net
spec:
  selector:
    app: netology-app-net
  ports:
    - name: nginx
      protocol: TCP
      port: 9091
      targetPort: 80
    - name: multitool-http
      protocol: TCP
      port: 9092
      targetPort: 8080
