HW files/HW k8s-3/netology-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: netology-app.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netology-svc-frontend
            port:
              number: 9001
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: netology-svc-backend
            port:
              number: 9002
